feat: expand BookResponse dto